<resources>
    <string name="app_name">Cash Register</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_productType">Product type</string>
    <string name="label_totalAmount">Total Amount (CAD)</string>
    <string name="label_buyBtn">Buy</string>
    <string name="label_managerBtn">Manager</string>
    <string name="label_product">Product</string>
    <string name="label_price">Price</string>
    <string name="dollar_amount">$%1$s</string>
    <string name="label_history">History</string>
    <string name="label_restock">Restock</string>
    <string name="label_inventory">Inventory</string>
    <string name="label_purchaseDate">Purchase Date</string>
    <string name="toast_message">Buying %1$d %2$s for $%3$s</string>
    <string name="label_updateQuantity">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_quantityUpdateHint">Enter Quantity</string>
    <string name="label_productToUpdate">Product to update</string>
    <string name="totalSpent">Total spent (CAD): $%1$s</string>
</resources>