<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestockActivity">

    <EditText
        android:id="@+id/quantityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:hint="@string/label_quantityUpdateHint"
        app:layout_constraintStart_toEndOf="@id/guideline10"
        app:layout_constraintEnd_toStartOf="@id/guideline11"
        app:layout_constraintTop_toBottomOf="@id/guideline8"
        android:gravity="center"
        android:autofillHints="0"
        android:inputType="number" />

    <TextView
        android:id="@+id/selectedProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minHeight="60dp"
        android:textStyle="italic"
        android:hint="@string/label_productType"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline8"
        app:layout_constraintEnd_toStartOf="@id/guideline10"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateQuantityBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:padding="15dp"
        android:text="@string/label_updateQuantity"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/quantityEditText"
        app:layout_constraintBottom_toTopOf="@id/cancelBtn"
        app:layout_constraintStart_toStartOf="@id/guideline10"
        app:layout_constraintEnd_toStartOf="@id/guideline11"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:padding="15dp"
        android:text="@string/label_cancel"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/updateQuantityBtn"
        app:layout_constraintBottom_toTopOf="@id/guideline12"
        app:layout_constraintStart_toStartOf="@id/guideline10"
        app:layout_constraintEnd_toStartOf="@id/guideline11"
        />

    <LinearLayout
        android:id="@+id/listLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/guideline12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@color/primary"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:textSize="15sp"
            android:text="@string/label_product"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:textSize="15sp"
            android:text="@string/label_inventory"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:textSize="15sp"
            android:text="@string/label_price"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/white"/>
    </LinearLayout>

    <ListView
        android:id="@+id/restockListView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listLabels"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>