<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <LinearLayout
        android:id="@+id/listLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@color/primary"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:textSize="15sp"
            android:text="@string/label_product"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:textSize="15sp"
            android:text="@string/label_quantity"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:textSize="15sp"
            android:text="@string/label_price"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/white"/>
    </LinearLayout>

    <ListView
        android:id="@+id/history_listView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listLabels"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalSpent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20sp"
        android:gravity="end"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>